2014-01-13  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Improved performance significantly by adding some caching back into the
    classpath handling code.
    * Renamed `FilePath` to `SourceFilePath`.
    * Added `ClassPath` class which contains classpath configuration. This
    class lazily initializes itself when needed.
    * Replaced `PathPart.packages()` with `PathPart.hasPackage(String)`.
    * `FolderPath` does not scan entire directory structure for packages, only
    polls single directory for each `hasPackage` query.
    * `JarFilePath` caches the package index so that subsequent `hasPackage`
    queries are faster.

2014-01-11  Görel Hedin <gorel.hedin@cs.lth.se>

    * Added option -nowarn for disabling warning messages.

2014-01-07  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Fixed error where some things were not properly pretty-printed in
    semantic error messages
    * Changed the error messages for:
        + imported type conflicting with visible type error
        + method invocation type error (added argument index)
        + qualified this access error (added enclosing type name)

2013-12-19  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Refactored classpath handling. PathPart is now abstract and all concrete
    subtypes are immutable. Classpaths must now be explicitly initialized
    before parsing compilation units by calling Program.initPaths().  This
    means that we can skip checking if the paths should be initialized before
    every type lookup but it also means there is a bigger burden of making
    sure the paths have been properly initialized before parsing.

2013-12-18  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Changed the semantics of TypeDecl.destinationPath and changed where
    JastAddJ generates classfiles to better match the javac behaviour

2013-12-12  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Removed TestServer because it was unused

2013-11-20  Jesper Öqvist <jesper.oqvist@cs.lth.se>
