@@ -12,3 +12,4 @@
 
 # temporary files
 /tmp
+/*.jar
