@@ -1,45 +1,67 @@
-package org.jastadd.jastaddj;
 /*
  * The JastAdd Extensible Java Compiler (http://jastadd.org) is covered
  * by the modified BSD License. You should have received a copy of the
  * modified BSD license with this compiler.
  *
  * Copyright (c) 2005-2008, Torbjorn Ekman
- *		 2011	    Jesper Öqvist <jesper.oqvist@cs.lth.se>
+ *               2011-2014, Jesper Öqvist <jesper.oqvist@cs.lth.se>
  * All rights reserved.
  */
+package org.jastadd.jastaddj;
 
 import AST.*;
 
 /**
  * Perform static semantic checks on a Java program.
  */
-@SuppressWarnings("javadoc")
 public class JavaChecker extends Frontend {
+
+	/**
+	 * Entry point for the Java checker.
+	 * @param args command-line arguments
+	 */
 	public static void main(String args[]) {
-		compile(args);
+		int exitCode = new JavaChecker().run(args);
+		if (exitCode != 0) {
+			System.exit(exitCode);
+		}
 	}
 
+	private final JavaParser parser;
+	private final BytecodeParser bytecodeParser;
+
+	/**
+	 * Initialize the Java checker.
+	 */
+	public JavaChecker() {
+		super("Java Checker", JastAddJVersion.getVersion());
+		parser = new JavaParser() {
+			@Override
+			public CompilationUnit parse(java.io.InputStream is, String
+					fileName) throws java.io.IOException,
+					beaver.Parser.Exception {
+				return new parser.JavaParser().parse(is, fileName);
+			}
+		};
+		bytecodeParser = new BytecodeParser();
+	}
+
+	/**
+	 * @param args command-line arguments
+	 * @return {@code true} on success, {@code false} on error
+	 * @deprecated Use run instead!
+	 */
+	@Deprecated
 	public static boolean compile(String args[]) {
-		return new JavaChecker().process(
-				args,
-				new BytecodeParser(),
-				new JavaParser() {
-					@Override
-					public CompilationUnit parse(java.io.InputStream is, String fileName) throws java.io.IOException, beaver.Parser.Exception {
-						return new parser.JavaParser().parse(is, fileName);
-					}
-				}
-				);
+		return 0 == new JavaChecker().run(args);
 	}
 
-	@Override
-	protected String name() {
-		return "Java Checker";
-	}
-
-	@Override
-	protected String version() {
-		return JastAddJVersion.getVersion();
+	/**
+	 * Run the Java checker.
+	 * @param args command-line arguments
+     * @return 0 on success, 1 on error, 2 on configuration error, 3 on system
+	 */
+	public int run(String args[]) {
+		return run(args, bytecodeParser, parser);
 	}
 }
