@@ -1,3 +1,12 @@
+2014-01-14  Jesper Öqvist <jesper.oqvist@cs.lth.se>
+
+    * Documented all methods in the `Frontend` class
+    * JastAddJ now uses the same exit codes as Javac
+    * Deprecated the `Frontend.process` method - will be replaced by
+    `Frontend.run` which returns compile error codes.
+    * Added `Frontend` constructor taking the compiler name and version so
+    that it is not necessary to override the `name()` and `version()` methods.
+
 2014-01-13  Jesper Öqvist <jesper.oqvist@cs.lth.se>
 
     * Improved performance significantly by adding some caching back into the
